--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static  'index.css' %}">
     <title>Tech</title>
 </head>
 <body>
-    <h1>Autenticação com OAuth 2.0</h1>
+    <header>
+        <img src="{% static  'assets/logo.jpeg' %}" alt="Uma pessoa feliz no pc" class="logo">
+    </header>
+    <main>
+        <h1>Autenticação com OAuth 2.0</h1>
+        <div class="social-media">
+            <div class="social-media-details">
+                <a href="">
+                    <img src="{% static  'assets/github.svg' %}" alt="Ícone para realizar autenticação com o git" class="social-media-icon">
+                    <p>Github</p>
+                </a>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
