--- a/templates/members.html
+++ b/templates/members.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static  'index.css' %}">
+    <link rel="stylesheet" href="{% static  'members.css' %}">
     <title>Tech | Membros</title>
 </head>
 <body>
@@ -14,6 +15,10 @@
     <main>
         <h1>Área para membros</h1>
         <p>Uma area de membros online e exclusiva para pessoas registradas!</p>
+
+        <div class="logout-btn-container">
+            <a href="http://localhost:8000/accounts/logout/" class="logout-btn">Logout</a>
+        </div>
     </main>
 
 </body>
